# EspectMainServer

./: Cargo.toml
conf/: config.toml
src/: config.rs  errors.rs  main.rs
src/data_models/: mod.rs  models.rs  rpc_data.rs
src/entity/: data_manager.rs  mod.rs  player.rs  ue_server.rs
