[package]
name = "mainserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-util = {version = "0.7", features = ["codec"]}

bytes = "1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
